# ollama_flow

./: .gitignore  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py  model_validation.py  streaming.py  structured_output.py
ollama_flow/: __init__.py  client.py  models.py  schemas.py
